--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 buildscript {
+	ext {
+        springBootVersion = '1.3.5.RELEASE'
+    }
     repositories {
+    	maven { url "http://repo.hadrion.com.br:8081/nexus/content/groups/public" }
+    	maven { url 'http://repo.spring.io/plugins-release' }
+    	mavenLocal()
         mavenCentral()
     }
     dependencies {
@@ -18,6 +24,8 @@ jar {
 }
 
 repositories {
+	maven { url "http://repo.hadrion.com.br:8081/nexus/content/groups/public" }
+    mavenLocal()
     mavenCentral()
 }
 
@@ -25,13 +33,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+
+    compile('com.oracle:ojdbc6:11.2.0')
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     testCompile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    compile('commons-lang:commons-lang:2.3')
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '2.9'
 }
